anchoranalysis/anchor#49 separated stream operations for ObjectCollection into ObjectCollectionStream